# client-for-bal-demo

./: Cargo.toml  build.rs  query.graphql  schema.json
src/: main.rs  query.rs
ui/: signinwindow.slint
