[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
graphql_client = {version = "0.13.0", features = ["reqwest-blocking"]}
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = {version = "1"}

async-std = {version = "1"}
dioxus-router = "0.4.3"
slint = "1.4.1"

[build-dependencies]
slint-build = "1.4.1"